@@ -2,6 +2,8 @@ This file shows the changes in this release of xPDO.
 
 xPDO 2.0.0-rc2 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#XPDO-42] Fixed error with xPDOQuery::parseConditions() ignoring NULL bound values.
+- Fixed xPDOCriteria::toSQL() to properly handle NULL values.
 - Updated/fixed xPDOZip implementation and enabled it as the preferred zip provider for xPDOTransport.
 - Made xPDOVehicle an abstract class. 
 - [#XPDO-4] Allow nesting conditions arbitrarily deep using simple nested array format.
